--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.30.0",
     "gsap": "^3.13.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
