--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.30.0",
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-slider": "^1.3.6",
     "gsap": "^3.13.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recharts": "^3.4.1"
+    "react-hook-form": "^7.67.0",
+    "recharts": "^3.4.1",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
