--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.67.0",
+    "react-hot-toast": "^2.6.0",
     "recharts": "^3.4.1",
     "zod": "^4.1.13"
   },
