--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8080",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.30.0",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-slider": "^1.3.6",
+    "axios": "^1.13.2",
     "gsap": "^3.13.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
