--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "axios": "^1.13.2",
     "gsap": "^3.13.0",
     "lucide-react": "^0.544.0",
-    "next": "15.5.4",
+    "next": "^15.5.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.67.0",
