--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.67.0",
     "react-hot-toast": "^2.6.0",
     "recharts": "^3.4.1",
+    "ulid": "^3.0.2",
     "zod": "^4.1.13"
   },
   "devDependencies": {
