--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@clerk/nextjs": "^6.30.0",
     "@hookform/resolvers": "^5.2.2",
+    "@posthog/react": "^1.5.2",
     "@radix-ui/react-slider": "^1.3.6",
     "axios": "^1.13.2",
     "gsap": "^3.13.0",
     "lucide-react": "^0.544.0",
     "next": "^15.5.9",
+    "posthog-js": "^1.310.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.67.0",
